add debit_card page
- add debit_card page
- minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -497,8 +497,6 @@ ul.list li:before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -640,6 +638,7 @@ ul.list li:before {
 }
 .wrapper main .inner .top-banner-image {
   overflow: hidden;
+  margin-left: auto;
 }
 .wrapper main .inner .top-banner-image img {
   width: 100%;
@@ -765,7 +764,12 @@ ul.list li:before {
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
-.wrapper main .inner .advantage-block-item-text {
+.wrapper main .inner .advantage-block-item-text-title {
+  margin-bottom: 5px;
+  font: 500 26px/1 'Gilroy', sans-serif;
+  color: #f65e64;
+}
+.wrapper main .inner .advantage-block-item-text-desc {
   font: 300 16px/1.5 'Gilroy', sans-serif;
 }
 .wrapper main .inner .advantage-block-item-image {
@@ -1840,7 +1844,7 @@ ul.list li:before {
 }
 .wrapper main .main-page .inner .category .actions_slider .swiper-controls .swiper-pagination {
   position: relative;
-  bottom: unset;
+  bottom: auto;
   width: auto;
   min-width: 50px;
   font: 20px/1 'Gilroy', sans-serif;
@@ -3036,8 +3040,8 @@ ul.list li:before {
   content: 'Бонусы';
   right: 33%;
   top: 35px;
-  width: unset;
-  height: unset;
+  width: auto;
+  height: auto;
   padding: 3px 15px;
   font: 300 18px/1 'Gilroy', sans-serif;
   background: #acce23;
@@ -3281,8 +3285,8 @@ ul.list li:before {
   content: 'Бонусы';
   right: 33%;
   top: 35px;
-  width: unset;
-  height: unset;
+  width: auto;
+  height: auto;
   padding: 3px 15px;
   font: 300 18px/1 'Gilroy', sans-serif;
   background: #acce23;
@@ -3617,7 +3621,7 @@ ul.list li:before {
   border-radius: 0;
 }
 .wrapper main .journal-page .inner .top-banner:after {
-  top: unset;
+  top: auto;
   bottom: 60px;
   width: 36px;
   height: 36px;
@@ -4337,7 +4341,7 @@ ul.list li:before {
 }
 .wrapper main .departments-page .inner .top-banner:before {
   right: 37%;
-  top: unset;
+  top: auto;
   bottom: -15px;
   width: 30px;
   height: 30px;
@@ -4353,7 +4357,7 @@ ul.list li:before {
 }
 .wrapper main .safety-page .inner .top-banner:before {
   right: 37%;
-  top: unset;
+  top: auto;
   bottom: -15px;
   width: 30px;
   height: 30px;
@@ -5031,7 +5035,7 @@ ul.list li:before {
 }
 .wrapper main .overdraft-page .inner .top-banner:after {
   right: 33%;
-  top: unset;
+  top: auto;
   bottom: -5px;
   width: 30px;
   height: 30px;
@@ -5467,7 +5471,7 @@ ul.list li:before {
 }
 .wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner:after {
   right: 35%;
-  top: unset;
+  top: auto;
   bottom: 40px;
   width: 57px;
   height: 57px;
@@ -5475,7 +5479,7 @@ ul.list li:before {
 .wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner-wave {
   position: absolute;
   right: 38%;
-  top: unset;
+  top: auto;
   bottom: 55px;
   width: 108px;
   height: 26px;
@@ -5622,13 +5626,13 @@ ul.list li:before {
   min-height: 225px;
 }
 .wrapper main .requisite-page .inner .top-banner:before {
-  top: unset;
+  top: auto;
   bottom: -15px;
 }
 .wrapper main .requisite-page .inner .top-banner:after {
   right: 7%;
   top: -25px;
-  bottom: unset;
+  bottom: auto;
   width: 55px;
   height: 55px;
 }
@@ -6767,6 +6771,40 @@ ul.list li:before {
 .wrapper main .partner-program-page .inner .atms-address-list-table .tr-descr .td:nth-child(2) {
   width: 230px;
 }
+.wrapper main .debit-card-page .inner .top-banner:before,
+.wrapper main .debit-card-page .inner .top-banner:after {
+  content: none;
+}
+.wrapper main .debit-card-page .inner .top-banner-image {
+  width: 450px;
+}
+.wrapper main .debit-card-page .inner .payment-system {
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding: 50px 0;
+  background: #fbfbfb;
+  border-radius: 20px;
+}
+.wrapper main .debit-card-page .inner .payment-system-text {
+  max-width: 500px;
+}
+.wrapper main .debit-card-page .inner .payment-system-text a {
+  color: #f65e64;
+}
+.wrapper main .debit-card-page .inner .payment-system-text a:hover {
+  text-decoration: underline;
+}
+.wrapper main .debit-card-page .inner .payment-system-block {
+  max-width: unset;
+  margin-left: 0;
+}
+.wrapper main .debit-card-page .inner .payment-system-block-item {
+  margin-right: 15px;
+}
+.wrapper main .debit-card-page .inner .payment-system-block-item:last-child {
+  margin-right: 0;
+}
 .wrapper main .start-business-page .inner .top-banner:before {
   content: none;
 }
@@ -7038,7 +7076,9 @@ ul.list li:before {
   opacity: 1;
 }
 .wrapper main .internet-business-page .inner .top-banner-image {
-  width: 325px;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 350px;
   margin-top: -30px;
 }
 .wrapper main .internet-business-page .inner .advantage-title,
@@ -7050,7 +7090,7 @@ ul.list li:before {
 }
 .wrapper main .small-business-page .inner .top-banner:after {
   right: 26%;
-  top: unset;
+  top: auto;
   bottom: 50px;
   width: 55px;
   height: 55px;
@@ -7058,7 +7098,7 @@ ul.list li:before {
 .wrapper main .small-business-page .inner .top-banner-wave {
   position: absolute;
   right: 26%;
-  top: unset;
+  top: auto;
   bottom: 60px;
   width: 108px;
   height: 57px;
@@ -7156,7 +7196,7 @@ ul.list li:before {
 }
 .wrapper main .all-tools-page .inner .top-banner:after {
   right: 25%;
-  top: unset;
+  top: auto;
   bottom: 40px;
   width: 55px;
   height: 55px;
