--- a/css/style.less
+++ b/css/style.less
@@ -464,7 +464,6 @@ ul.list {
       .top-banner {
         position: relative;
         display: flex;
-        flex-wrap: wrap;
         justify-content: space-between;
         min-height: 320px;
         padding-left: 70px;
@@ -627,6 +626,7 @@ ul.list {
         }
         &-image {
           overflow: hidden;
+          margin-left: auto; // ie11 justify-content: space-between fix
           img {
             width: 100%;
           }
@@ -734,7 +734,14 @@ ul.list {
               }
             }
             &-text {
-              font: 300 16px/1.5 @font;
+              &-title {
+                margin-bottom: 5px;
+                font: 500 26px/1 @font;
+                color: @pink;
+              }
+              &-desc {
+                font: 300 16px/1.5 @font;
+              }
             }
             &-image {
               height: 75%;
@@ -1727,7 +1734,7 @@ ul.list {
                 align-items: center;
                 .swiper-pagination {
                   position: relative;
-                  bottom: unset;
+                  bottom: auto;
                   width: auto;
                   min-width: 50px;
                   font: 20px/1 @font;
@@ -2807,8 +2814,8 @@ ul.list {
             content: 'Бонусы';
             right: 33%;
             top: 35px;
-            width: unset;
-            height: unset;
+            width: auto;
+            height: auto;
             padding: 3px 15px;
             font: 300 18px/1 @font;
             background: #acce23;
@@ -3026,8 +3033,8 @@ ul.list {
             content: 'Бонусы';
             right: 33%;
             top: 35px;
-            width: unset;
-            height: unset;
+            width: auto;
+            height: auto;
             padding: 3px 15px;
             font: 300 18px/1 @font;
             background: #acce23;
@@ -3329,7 +3336,7 @@ ul.list {
             border-radius: 0;
           }
           &:after {
-            top: unset;
+            top: auto;
             bottom: 60px;
             width: 36px;
             height: 36px;
@@ -3996,7 +4003,7 @@ ul.list {
           min-height: 225px;
           &:before {
             right: 37%;
-            top: unset;
+            top: auto;
             bottom: -15px;
             width: 30px;
             height: 30px;
@@ -4016,7 +4023,7 @@ ul.list {
           min-height: 225px;
           &:before {
             right: 37%;
-            top: unset;
+            top: auto;
             bottom: -15px;
             width: 30px;
             height: 30px;
@@ -4666,7 +4673,7 @@ ul.list {
           }
           &:after {
             right: 33%;
-            top: unset;
+            top: auto;
             bottom: -5px;
             width: 30px;
             height: 30px;
@@ -5092,7 +5099,7 @@ ul.list {
           .top-banner {
             &:after {
               right: 35%;
-              top: unset;
+              top: auto;
               bottom: 40px;
               width: 57px;
               height: 57px;
@@ -5100,7 +5107,7 @@ ul.list {
             &-wave {
               position: absolute;
               right: 38%;
-              top: unset;
+              top: auto;
               bottom: 55px;
               width: 108px;
               height: 26px;
@@ -5237,13 +5244,13 @@ ul.list {
         .top-banner {
           min-height: 225px;
           &:before {
-            top: unset;
+            top: auto;
             bottom: -15px;
           }
           &:after {
             right: 7%;
             top: -25px;
-            bottom: unset;
+            bottom: auto;
             width: 55px;
             height: 55px;
           }
@@ -6359,6 +6366,44 @@ ul.list {
         }
       }
     }
+    .debit-card-page {
+      .inner {
+        .top-banner {
+          &:before,
+          &:after {
+            content: none;
+          }
+          &-image {
+            width: 450px;
+          }
+        }
+        .payment-system {
+          justify-content: space-evenly;
+          padding: 50px 0;
+          background: @gray;
+          border-radius: 20px;
+          &-text {
+            max-width: 500px;
+            a {
+              color: @pink;
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+          &-block {
+            max-width: unset;
+            margin-left: 0;
+            &-item {
+              margin-right: 15px;
+              &:last-child {
+                margin-right: 0;
+              }
+            }
+          }
+        }
+      }
+    }
 
     // Marketplace
     .start-business-page {
@@ -6628,7 +6673,8 @@ ul.list {
       .inner {
         .top-banner {
           &-image {
-            width: 325px;
+            align-self: flex-end;
+            width: 350px;
             margin-top: -30px;
           }
         }
@@ -6648,7 +6694,7 @@ ul.list {
           }
           &:after {
             right: 26%;
-            top: unset;
+            top: auto;
             bottom: 50px;
             width: 55px;
             height: 55px;
@@ -6656,7 +6702,7 @@ ul.list {
           &-wave {
             position: absolute;
             right: 26%;
-            top: unset;
+            top: auto;
             bottom: 60px;
             width: 108px;
             height: 57px;
@@ -6762,7 +6808,7 @@ ul.list {
           }
           &:after {
             right: 25%;
-            top: unset;
+            top: auto;
             bottom: 40px;
             width: 55px;
             height: 55px;
