--- a/css/style.css
+++ b/css/style.css
@@ -6805,6 +6805,104 @@ ul.list li:before {
 .wrapper main .debit-card-page .inner .payment-system-block-item:last-child {
   margin-right: 0;
 }
+.wrapper main .corporate-card-page .inner .top-banner:before {
+  top: -12px;
+  width: 37px;
+  height: 37px;
+}
+.wrapper main .corporate-card-page .inner .top-banner:after {
+  content: none;
+}
+.wrapper main .corporate-card-page .inner .top-banner-content-text-desc {
+  max-width: 300px;
+}
+.wrapper main .corporate-card-page .inner .top-banner-image {
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 400px;
+}
+.wrapper main .corporate-card-page .inner .profit-spend {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+  padding: 45px 60px 0 50px;
+  background: #fbfbfb;
+  border-radius: 20px;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-badge {
+  position: absolute;
+  right: 20px;
+  top: 30px;
+  padding: 0 17px;
+  font: 300 16px/1.5 'Gilroy', sans-serif;
+  background: #acce23;
+  border-radius: 35px;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content {
+  max-width: 560px;
+  margin-top: 10px;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-title {
+  font: 700 36px/1.3 'Gilroy', sans-serif;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-list {
+  margin-top: 30px;
+  margin-bottom: 0;
+  counter-reset: list;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-list li {
+  position: relative;
+  margin-top: 30px;
+  padding-left: 20px;
+  font: 300 18px/1.5 'Gilroy', sans-serif;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-list li:before {
+  content: counter(list) '. ';
+  counter-increment: list;
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #f65e64;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-list li:first-child {
+  margin-top: 0;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-desc {
+  position: relative;
+  margin-top: 50px;
+  padding-left: 75px;
+  font: 300 14px/1.3 'Gilroy', sans-serif;
+  color: #808080;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-desc:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 60px;
+  height: 38px;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-desc a {
+  color: #f65e64;
+  text-decoration: underline;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-content-desc a:hover {
+  text-decoration: none;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-image {
+  max-width: 400px;
+}
+.wrapper main .corporate-card-page .inner .profit-spend-image img {
+  width: 100%;
+}
+.wrapper main .corporate-card-page .inner .steps-block-item {
+  width: 32%;
+}
 .wrapper main .start-business-page .inner .top-banner:before {
   content: none;
 }
