--- a/css/style.less
+++ b/css/style.less
@@ -450,6 +450,9 @@ ul.list {
         a {
           padding: 6px 19px 9px;
           font: 300 18px/1 @font;
+          &.selected {
+            color: @pink;
+          }
         }
       }
     }
@@ -489,42 +492,26 @@ ul.list {
           background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
           border-radius: 50%;
         }
-        // &-animation {
-        //   position: absolute;
-        //   right: 48%;
-        //   top: 110px;
-        //   width: 145px;
-        //   height: 57px;
-        //   &-bubble {
-        //     position: absolute;
-        //     width: 57px;
-        //     height: 57px;
-        //     right: 0;
-        //     top: 50%;
-        //     transform: translateY(-50%);
-        //     background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
-        //     border-radius: 50%;
-        //   }
-        //   &-wave {
-        //     position: absolute;
-        //     left: 0;
-        //     top: 50%;
-        //     transform: translateY(-50%);
-        //     width: 134px;
-        //     height: 17px;
-        //     overflow: hidden;
-        //     &:before {
-        //       content: '';
-        //       position: absolute;
-        //       left: 0;
-        //       top: 0;
-        //       width: 200%;
-        //       height: 100%;
-        //       background: url(../img/icon_wave.svg) no-repeat;
-        //       animation: wave 5s linear infinite;
-        //     }
-        //   }
-        // }
+        &-wave {
+          position: absolute;
+          display: none;
+          right: 48%;
+          top: 110px;
+          width: 134px;
+          height: 17px;
+          overflow: hidden;
+          &:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 200%;
+            height: 100%;
+            background: url(../img/icon_wave.svg);
+            background-size: contain;
+            animation: wave 5s linear infinite;
+          }
+        }
         &-content {
           display: flex;
           flex-direction: column;
@@ -831,7 +818,7 @@ ul.list {
             &-title {
               position: relative;
               padding: 15px;
-              font: 500 22px/1 @font;
+              font: 500 22px/1.3 @font;
               background: #f6f6f6;
               border-radius: 5px;
               transition: 0.3s;
@@ -883,12 +870,14 @@ ul.list {
           margin-left: 120px;
           &-item {
             width: 98px;
+            height: 98px;
             margin-top: 15px;
             &:nth-child(-n + 3) {
               margin-top: 0;
             }
             img {
               width: 100%;
+              height: 100%;
             }
           }
         }
@@ -2680,23 +2669,7 @@ ul.list {
             content: none;
           }
           &-wave {
-            position: absolute;
-            right: 48%;
-            top: 110px;
-            width: 134px;
-            height: 17px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg) no-repeat;
-              background-size: contain;
-              animation: wave 5s linear infinite;
-            }
+            display: block;
           }
           &-image {
             width: 320px;
@@ -3529,22 +3502,11 @@ ul.list {
             content: none;
           }
           &-wave {
-            position: absolute;
+            display: block;
             right: 23%;
             top: 75px;
             width: 108px;
             height: 13px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg) no-repeat;
-              animation: wave 5s linear infinite;
-            }
           }
           &-image {
             align-self: flex-end;
@@ -3590,49 +3552,17 @@ ul.list {
             &-item {
               position: relative;
               margin-top: 55px;
-              padding-top: 90px;
               width: 50%;
-              &:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 70px;
-                height: 65px;
-              }
               &:nth-child(-n + 2) {
                 margin-top: 0;
               }
               &-title {
+                margin-top: 35px;
                 font: 500 24px/1.3 @font;
               }
               &-desc {
                 margin-top: 35px;
                 font: 300 18px/1.5 @font;
-              }
-              &.item1 {
-                &:before {
-                  background: url(../img/features_img1.svg) center no-repeat;
-                  background-size: contain;
-                }
-              }
-              &.item2 {
-                &:before {
-                  background: url(../img/features_img2.svg) center no-repeat;
-                  background-size: contain;
-                }
-              }
-              &.item3 {
-                &:before {
-                  background: url(../img/features_img3.svg) center no-repeat;
-                  background-size: contain;
-                }
-              }
-              &.item4 {
-                &:before {
-                  background: url(../img/features_img4.svg) center no-repeat;
-                  background-size: contain;
-                }
               }
             }
           }
@@ -4151,10 +4081,14 @@ ul.list {
                 font: 500 30px/1.3 @font;
               }
               &-desc {
+                margin-top: 30px;
                 font: 300 18px/1.5 @font;
                 span {
                   display: block;
                   margin-top: 30px;
+                  &:first-child {
+                    margin-top: 0;
+                  }
                   a {
                     text-decoration: underline;
                     color: @pink;
@@ -4185,22 +4119,11 @@ ul.list {
             height: 55px;
           }
           &-wave {
-            position: absolute;
+            display: block;
             right: 35%;
             top: 50px;
             width: 108px;
             height: 26px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg);
-              animation: wave 5s linear infinite;
-            }
           }
           &-content {
             &-text {
@@ -4615,22 +4538,11 @@ ul.list {
             height: 51px;
           }
           &-wave {
-            position: absolute;
+            display: block;
             right: 43%;
             top: 50px;
             width: 108px;
             height: 13px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg) no-repeat;
-              animation: wave 5s linear infinite;
-            }
           }
           &-content {
             &-text {
@@ -4679,22 +4591,11 @@ ul.list {
             height: 30px;
           }
           &-wave {
-            position: absolute;
+            display: block;
             right: 43%;
             top: 50px;
             width: 108px;
             height: 13px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg) no-repeat;
-              animation: wave 5s linear infinite;
-            }
           }
           &-image {
             width: 246px;
@@ -4856,33 +4757,15 @@ ul.list {
             height: 56px;
           }
           &-wave {
-            position: absolute;
-            right: 35%;
+            display: block;
+            right: 38%;
             top: 100px;
             width: 108px;
             height: 57px;
-            margin-right: 45px;
-            overflow: hidden;
             &:before {
-              content: '';
-              position: absolute;
-              left: 0;
               top: 50%;
-              width: 200%;
               height: 25px;
               transform: translateY(-50%);
-              background: url(../img/icon_wave.svg);
-              animation: wave 5s linear infinite;
-            }
-            &:after {
-              position: absolute;
-              right: 0;
-              top: 50%;
-              width: 57px;
-              height: 57px;
-              transform: translateY(-50%);
-              background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
-              border-radius: 50%;
             }
           }
           &-image {
@@ -5071,22 +4954,11 @@ ul.list {
               height: 57px;
             }
             &-wave {
-              position: absolute;
+              display: block;
               right: 30%;
               top: 50px;
               width: 108px;
               height: 13px;
-              overflow: hidden;
-              &:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 200%;
-                height: 100%;
-                background: url(../img/icon_wave.svg) no-repeat;
-                animation: wave 5s linear infinite;
-              }
             }
             &-image {
               width: 200px;
@@ -5105,23 +4977,12 @@ ul.list {
               height: 57px;
             }
             &-wave {
-              position: absolute;
+              display: block;
               right: 38%;
               top: auto;
               bottom: 55px;
               width: 108px;
               height: 26px;
-              overflow: hidden;
-              &:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 200%;
-                height: 100%;
-                background: url(../img/icon_wave.svg);
-                animation: wave 5s linear infinite;
-              }
             }
             &-image {
               width: 330px;
@@ -5604,23 +5465,15 @@ ul.list {
             height: 56px;
           }
           &-wave {
-            position: absolute;
-            right: 35%;
+            display: block;
+            right: 38%;
             top: 45px;
             width: 108px;
             height: 57px;
-            margin-right: 45px;
-            overflow: hidden;
             &:before {
-              content: '';
-              position: absolute;
-              left: 0;
               top: 50%;
-              width: 200%;
               height: 25px;
               transform: translateY(-50%);
-              background: url(../img/icon_wave.svg);
-              animation: wave 5s linear infinite;
             }
           }
           &-image {
@@ -6511,6 +6364,47 @@ ul.list {
         }
       }
     }
+    .legal-assistance-page {
+      .inner {
+        .top-banner {
+          &:before {
+            right: 36%;
+            top: 35px;
+            width: 32px;
+            height: 32px;
+          }
+          &:after {
+            top: auto;
+            bottom: 53px;
+            width: 51px;
+            height: 51px;
+          }
+          &-wave {
+            display: block;
+            right: 33%;
+            top: auto;
+            bottom: 65px;
+            width: 108px;
+            height: 57px;
+            &:before {
+              top: 50%;
+              height: 25px;
+              transform: translateY(-50%);
+            }
+          }
+          &-image {
+            width: 290px;
+          }
+        }
+        .steps {
+          &-block {
+            &-item {
+              width: 32%;
+            }
+          }
+        }
+      }
+    }
 
     // Marketplace
     .start-business-page {
@@ -6529,23 +6423,11 @@ ul.list {
             border-radius: 0;
           }
           &-wave {
-            position: absolute;
+            display: block;
             right: 30%;
             top: 150px;
             width: 134px;
             height: 17px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg) no-repeat;
-              background-size: contain;
-              animation: wave 5s linear infinite;
-            }
           }
           &-image {
             width: 426px;
@@ -6779,6 +6661,10 @@ ul.list {
     .internet-business-page {
       .inner {
         .top-banner {
+          &:before,
+          &:after {
+            content: none;
+          }
           &-image {
             align-self: flex-end;
             width: 350px;
@@ -6807,34 +6693,16 @@ ul.list {
             height: 55px;
           }
           &-wave {
-            position: absolute;
-            right: 26%;
+            display: block;
+            right: 28%;
             top: auto;
             bottom: 60px;
             width: 108px;
             height: 57px;
-            margin-right: 45px;
-            overflow: hidden;
             &:before {
-              content: '';
-              position: absolute;
-              left: 0;
               top: 50%;
-              width: 200%;
               height: 25px;
               transform: translateY(-50%);
-              background: url(../img/icon_wave.svg);
-              animation: wave 5s linear infinite;
-            }
-            &:after {
-              position: absolute;
-              right: 0;
-              top: 50%;
-              width: 57px;
-              height: 57px;
-              transform: translateY(-50%);
-              background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
-              border-radius: 50%;
             }
           }
           &-image {
@@ -6864,33 +6732,15 @@ ul.list {
             height: 55px;
           }
           &-wave {
-            position: absolute;
-            right: 35%;
+            display: block;
+            right: 38%;
             top: 60px;
             width: 108px;
             height: 57px;
-            margin-right: 45px;
-            overflow: hidden;
             &:before {
-              content: '';
-              position: absolute;
-              left: 0;
               top: 50%;
-              width: 200%;
               height: 25px;
               transform: translateY(-50%);
-              background: url(../img/icon_wave.svg);
-              animation: wave 5s linear infinite;
-            }
-            &:after {
-              position: absolute;
-              right: 0;
-              top: 50%;
-              width: 57px;
-              height: 57px;
-              transform: translateY(-50%);
-              background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
-              border-radius: 50%;
             }
           }
           &-image {
@@ -6921,22 +6771,11 @@ ul.list {
             height: 55px;
           }
           &-wave {
-            position: absolute;
+            display: block;
             right: 28%;
             bottom: 50px;
             width: 108px;
             height: 26px;
-            overflow: hidden;
-            &:before {
-              content: '';
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 200%;
-              height: 100%;
-              background: url(../img/icon_wave.svg);
-              animation: wave 5s linear infinite;
-            }
           }
           &-image {
             align-self: flex-end;
@@ -7410,6 +7249,27 @@ ul.list {
           margin-top: 20px;
           font: 500 30px/1.3 @font;
         }
+        &-tabs {
+          display: flex;
+          margin-top: 30px;
+          &-item {
+            margin-left: 15px;
+            padding: 5px 25px;
+            font: 300 18px/1.3 @font;
+            border: 1px solid #e6e8e0;
+            border-radius: 20px;
+            transition: 0.3s;
+            cursor: pointer;
+            &:first-child {
+              margin-left: 0;
+            }
+            &.active {
+              color: #fff;
+              background: @pink;
+              border-color: @pink;
+            }
+          }
+        }
         &-block {
           display: flex;
           justify-content: space-between;
@@ -7569,9 +7429,6 @@ ul.list {
                   }
                 }
               }
-              &.phone {
-                margin-top: 0;
-              }
             }
             &-sms {
               position: relative;
@@ -7668,8 +7525,8 @@ ul.list {
                 height: 65px;
                 padding: 25px 20px 0;
                 font: 300 18px/1.5 @font;
-                background: none;
-                border: 1px solid #e6e8e0;
+                background: #f4f4f4;
+                border: none;
                 border-radius: 10px;
                 outline: none;
                 .ui-icon {
@@ -7680,12 +7537,64 @@ ul.list {
                 }
               }
             }
+            &-text {
+              textarea {
+                width: 100%;
+                margin-top: 20px;
+                padding: 20px 30px;
+                background: #f4f4f4;
+                border: none;
+                border-radius: 10px;
+                outline: none;
+                resize: none;
+              }
+            }
+            &-file {
+              margin-top: 25px;
+            }
             &-terms {
               margin-top: 25px;
               font: 300 16px/1.3 @font;
               a {
                 text-decoration: underline;
                 color: @pink;
+              }
+              input[type='checkbox'] {
+                display: none;
+                &:checked + label:after {
+                  opacity: 1;
+                }
+              }
+              label {
+                position: relative;
+                padding-left: 40px;
+                font: 300 18px/1.5 @font;
+                cursor: pointer;
+                user-select: none;
+                &:before {
+                  content: '';
+                  width: 28px;
+                  height: 28px;
+                  position: absolute;
+                  left: 0;
+                  top: 50%;
+                  transform: translate(0, -50%);
+                  border: 1px solid @pink;
+                  border-radius: 5px;
+                  transition: 0.3s;
+                }
+                &:after {
+                  content: '';
+                  position: absolute;
+                  left: 7px;
+                  top: 50%;
+                  width: 14px;
+                  height: 14px;
+                  transform: translateY(-50%);
+                  background: url(../img/icon_tick.svg) no-repeat;
+                  opacity: 0;
+                  transition: 0.3s;
+                }
               }
             }
             &-buttons {
