--- a/css/style.css
+++ b/css/style.css
@@ -777,12 +777,17 @@ ul.list li:before {
   padding: 0 20px 0 30px;
   border: 1px solid #e6e8e0;
   border-radius: 20px;
+  overflow: hidden;
 }
 .wrapper main .inner .advantage-block-item:nth-child(-n + 3) {
   margin-top: 0;
 }
 .wrapper main .inner .advantage-block-item.nopr {
   padding-right: 0;
+}
+.wrapper main .inner .advantage-block-item.fl-start .advantage-block-item-image {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 .wrapper main .inner .advantage-block-item.fl-end .advantage-block-item-image {
   -ms-flex-item-align: end;
@@ -2255,6 +2260,7 @@ ul.list li:before {
   background: #fff;
   border-radius: 35px;
   border: 1px solid rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 .wrapper main .main-page .inner .best-tariffs-slider .swiper-pagination {
   display: -webkit-box;
@@ -4954,7 +4960,6 @@ ul.list li:before {
   height: 51px;
 }
 .wrapper main .deposit-page .inner .top-banner-wave {
-  display: block;
   right: 43%;
   top: 50px;
   width: 108px;
@@ -6823,6 +6828,77 @@ ul.list li:before {
 .wrapper main .legal-assistance-page .inner .steps-block-item {
   width: 32%;
 }
+.wrapper main .payment-page .inner .top-banner:before {
+  right: 36%;
+  top: 35px;
+  width: 32px;
+  height: 32px;
+}
+.wrapper main .payment-page .inner .top-banner:after {
+  top: auto;
+  bottom: 53px;
+  width: 51px;
+  height: 51px;
+}
+.wrapper main .payment-page .inner .top-banner-wave {
+  display: block;
+  right: 33%;
+  top: auto;
+  bottom: 65px;
+  width: 108px;
+  height: 57px;
+}
+.wrapper main .payment-page .inner .top-banner-wave:before {
+  top: 50%;
+  height: 25px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.wrapper main .payment-page .inner .top-banner-content-text-desc {
+  max-width: 500px;
+}
+.wrapper main .payment-page .inner .top-banner-image {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 190px;
+}
+.wrapper main .payment-page .inner .how-much {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 80px;
+  padding: 0 130px 0 80px;
+  background: #fbfbfb;
+  border-radius: 20px;
+}
+.wrapper main .payment-page .inner .how-much-content-title {
+  font: 700 36px/1.3 'Gilroy', sans-serif;
+}
+.wrapper main .payment-page .inner .how-much-content-value {
+  margin-top: 20px;
+  font: 700 36px/1.3 'Gilroy', sans-serif;
+  color: #f65e64;
+}
+.wrapper main .payment-page .inner .how-much-content-desc {
+  margin-top: 10px;
+  font: 300 18px/1.5 'Gilroy', sans-serif;
+}
+.wrapper main .payment-page .inner .how-much-image {
+  width: 420px;
+  margin-top: -20px;
+}
+.wrapper main .payment-page .inner .how-much-image img {
+  width: 100%;
+}
+.wrapper main .payment-page .inner .steps.connect .steps-block-item {
+  width: 32%;
+}
 .wrapper main .start-business-page .inner .top-banner:before {
   content: none;
 }
@@ -7173,6 +7249,7 @@ ul.list li:before {
 .wrapper main .all-tools-page .inner .top-banner-wave {
   display: block;
   right: 28%;
+  top: auto;
   bottom: 50px;
   width: 108px;
   height: 26px;
