--- a/css/style.less
+++ b/css/style.less
@@ -709,11 +709,17 @@ ul.list {
             padding: 0 20px 0 30px;
             border: 1px solid #e6e8e0;
             border-radius: 20px;
+            overflow: hidden;
             &:nth-child(-n + 3) {
               margin-top: 0;
             }
             &.nopr {
               padding-right: 0;
+            }
+            &.fl-start {
+              .advantage-block-item-image {
+                align-self: flex-start;
+              }
             }
             &.fl-end {
               .advantage-block-item-image {
@@ -2071,6 +2077,7 @@ ul.list {
                     background: #fff;
                     border-radius: 35px;
                     border: 1px solid rgba(0, 0, 0, 0.3);
+                    cursor: pointer;
                   }
                 }
               }
@@ -4538,7 +4545,7 @@ ul.list {
             height: 51px;
           }
           &-wave {
-            display: block;
+            // display: block;
             right: 43%;
             top: 50px;
             width: 108px;
@@ -6405,6 +6412,85 @@ ul.list {
         }
       }
     }
+    .payment-page {
+      .inner {
+        .top-banner {
+          &:before {
+            right: 36%;
+            top: 35px;
+            width: 32px;
+            height: 32px;
+          }
+          &:after {
+            top: auto;
+            bottom: 53px;
+            width: 51px;
+            height: 51px;
+          }
+          &-wave {
+            display: block;
+            right: 33%;
+            top: auto;
+            bottom: 65px;
+            width: 108px;
+            height: 57px;
+            &:before {
+              top: 50%;
+              height: 25px;
+              transform: translateY(-50%);
+            }
+          }
+          &-content {
+            &-text {
+              &-desc {
+                max-width: 500px;
+              }
+            }
+          }
+          &-image {
+            align-self: flex-end;
+            width: 190px;
+          }
+        }
+        .how-much {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-top: 80px;
+          padding: 0 130px 0 80px;
+          background: @gray;
+          border-radius: 20px;
+          &-content {
+            &-title {
+              font: 700 36px/1.3 @font;
+            }
+            &-value {
+              margin-top: 20px;
+              font: 700 36px/1.3 @font;
+              color: @pink;
+            }
+            &-desc {
+              margin-top: 10px;
+              font: 300 18px/1.5 @font;
+            }
+          }
+          &-image {
+            width: 420px;
+            margin-top: -20px;
+            img {
+              width: 100%;
+            }
+          }
+        }
+        .steps {
+          &.connect {
+            .steps-block-item {
+              width: 32%;
+            }
+          }
+        }
+      }
+    }
 
     // Marketplace
     .start-business-page {
@@ -6773,6 +6859,7 @@ ul.list {
           &-wave {
             display: block;
             right: 28%;
+            top: auto;
             bottom: 50px;
             width: 108px;
             height: 26px;
